[gd_scene load_steps=2 format=3 uid="uid://d2yhr58qimxwvwy55c1"]

[ext_resource type="Script" path="res://scripts/map/map_scene.gd" id="1_9i6vr"]
[ext_resource type="Script" path="res://scripts/map/map_generator.gd" id="2_b2cq5"]

[node name="MapScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_9i6vr")

[node name="MapGenerator" type="Node" parent="."]
script = ExtResource("2_b2cq5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.08, 0.2, 1.0)

[node name="MapContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NodeGrid" type="Control" parent="MapContainer"]
layout_mode = 2
custom_minimum_size = Vector2(1200, 1200)
size = Vector2(1200, 1200)

[node name="PathLines" type="Control" parent="MapContainer"]
layout_mode = 2
size = Vector2(1200, 1200)
mouse_filter = 2

[node name="PlayerMarker" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 100.0
offset_top = 50.0
offset_right = 140.0
offset_bottom = 90.0
custom_minimum_size = Vector2(40, 40)
size = Vector2(40, 40)

[node name="Icon" type="ColorRect" parent="PlayerMarker"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.8, 1.0, 1.0)

[node name="Label" type="Label" parent="PlayerMarker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
offset_left = -10.0
offset_top = -32.0
offset_right = 10.0
offset_bottom = -15.0
text = "YOU"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 12

[node name="UIElements" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="UIElements"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
size = Vector2(400, 30)
theme_override_constants/separation = 50

[node name="GoldLabel" type="Label" parent="UIElements"]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 50.0
text = "Gold: 0"
theme_override_font_sizes/font_size = 18

[node name="FloorLabel" type="Label" parent="UIElements"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -40.0
offset_top = 20.0
offset_right = 40.0
offset_bottom = 50.0
text = "Floor 1"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="PartyButton" type="Button" parent="UIElements"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
size = Vector2(100, 30)
text = "Party"
theme_override_font_sizes/font_size = 14

[node name="MapInfoLabel" type="Label" parent="UIElements"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
text = "Select a node to continue"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
theme_override_font_sizes/font_size = 14

[node name="EventPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
custom_minimum_size = Vector2(400, 300)
size = Vector2(400, 300)
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="EventPanel"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 10

[node name="EventTitle" type="Label" parent="EventPanel/VBoxContainer"]
layout_mode = 2
size = Vector2(380, 38)
text = "Event Title"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 20
theme_override_font_sizes/bold_font_size = 22

[node name="EventDescription" type="Label" parent="EventPanel/VBoxContainer"]
layout_mode = 2
size = Vector2(380, 100)
text = "Event Description"
horizontal_alignment = 1
vertical_alignment = 0
autowrap_mode = 2
theme_override_font_sizes/font_size = 14

[node name="EventOptions" type="VBoxContainer" parent="EventPanel/VBoxContainer"]
layout_mode = 2
size = Vector2(380, 100)
theme_override_constants/separation = 5
